--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,15 +28,7 @@ jobs:
           pkg-manager: npm
       - run:
           name: Run tests
-          command: |
-                if [ -e yarn.lock ]; then
-                yarn install --frozen-lockfile
-                elif [ -e package-lock.json ]; then
-                npm ci
-                else
-                npm i
-                fi
-                npm run build
+          command: npm test
 
 workflows:
   # Below is the definition of your workflow.
